{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 99,
  "lineage": "90d9878c-64e4-db90-0a38-b5af06466639",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0855f0bb0115b9472",
            "arn": "arn:aws:ec2:us-east-1:934271694309:elastic-ip/eipalloc-0855f0bb0115b9472",
            "domain": "vpc",
            "id": "eipalloc-0855f0bb0115b9472",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-236-85-24.compute-1.amazonaws.com",
            "public_ip": "54.236.85.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-cluster-nat-gateway-eip-1"
            },
            "tags_all": {
              "Name": "devops-cluster-nat-gateway-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8c2521ca1dfd65f",
            "arn": "arn:aws:ec2:us-east-1:934271694309:elastic-ip/eipalloc-0b8c2521ca1dfd65f",
            "domain": "vpc",
            "id": "eipalloc-0b8c2521ca1dfd65f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-237-50-190.compute-1.amazonaws.com",
            "public_ip": "54.237.50.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-cluster-nat-gateway-eip-2"
            },
            "tags_all": {
              "Name": "devops-cluster-nat-gateway-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:934271694309:internet-gateway/igw-01f3d947777d1c201",
            "id": "igw-01f3d947777d1c201",
            "owner_id": "934271694309",
            "tags": {
              "Name": "devops-cluster-igw"
            },
            "tags_all": {
              "Name": "devops-cluster-igw"
            },
            "vpc_id": "vpc-04e303f8c0132d32d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0855f0bb0115b9472",
            "association_id": "eipassoc-0b6eef23b7bbde4f0",
            "connectivity_type": "public",
            "id": "nat-00b6f13aead67b50c",
            "network_interface_id": "eni-0a9d0138b5e78ea7b",
            "private_ip": "10.0.1.91",
            "public_ip": "54.236.85.24",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dc5b25b48f71353f",
            "tags": {
              "Name": "devops-cluster-nat-gateway-1"
            },
            "tags_all": {
              "Name": "devops-cluster-nat-gateway-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.eks_igw",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8c2521ca1dfd65f",
            "association_id": "eipassoc-062cf71639c971f90",
            "connectivity_type": "public",
            "id": "nat-0a28cc951fed1036d",
            "network_interface_id": "eni-0b135d7b99cba7680",
            "private_ip": "10.0.2.133",
            "public_ip": "54.237.50.190",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0574982dd3ecd6703",
            "tags": {
              "Name": "devops-cluster-nat-gateway-2"
            },
            "tags_all": {
              "Name": "devops-cluster-nat-gateway-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.eks_igw",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:934271694309:route-table/rtb-03289f4635ae39cf3",
            "id": "rtb-03289f4635ae39cf3",
            "owner_id": "934271694309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00b6f13aead67b50c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-cluster-private-rt-1"
            },
            "tags_all": {
              "Name": "devops-cluster-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e303f8c0132d32d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.eks_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:934271694309:route-table/rtb-08c7870ca0b71e0ae",
            "id": "rtb-08c7870ca0b71e0ae",
            "owner_id": "934271694309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a28cc951fed1036d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-cluster-private-rt-2"
            },
            "tags_all": {
              "Name": "devops-cluster-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e303f8c0132d32d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.eks_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:934271694309:route-table/rtb-03208c968d1784c11",
            "id": "rtb-03208c968d1784c11",
            "owner_id": "934271694309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f3d947777d1c201",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-cluster-public-rt"
            },
            "tags_all": {
              "Name": "devops-cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e303f8c0132d32d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1b988b70a08f185",
            "route_table_id": "rtb-03289f4635ae39cf3",
            "subnet_id": "subnet-0b8dd50bdfb635fdc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.eks_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0149f40827536f27a",
            "route_table_id": "rtb-08c7870ca0b71e0ae",
            "subnet_id": "subnet-043751b38c17d32e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.eks_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0230cfe6e333d6060",
            "route_table_id": "rtb-03208c968d1784c11",
            "subnet_id": "subnet-0dc5b25b48f71353f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0777c1ab5d15d26",
            "route_table_id": "rtb-03208c968d1784c11",
            "subnet_id": "subnet-0574982dd3ecd6703"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:934271694309:security-group/sg-0f955b44a07b6704a",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f955b44a07b6704a",
            "ingress": [],
            "name": "devops-cluster-cluster-sg",
            "name_prefix": "",
            "owner_id": "934271694309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-cluster-cluster-sg"
            },
            "tags_all": {
              "Name": "devops-cluster-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e303f8c0132d32d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:934271694309:security-group/sg-0c57de2a0f5d917d3",
            "description": "Security group for EKS node group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c57de2a0f5d917d3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f955b44a07b6704a"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f955b44a07b6704a"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-cluster-node-sg",
            "name_prefix": "",
            "owner_id": "934271694309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-cluster-node-sg",
              "kubernetes.io/cluster/devops-cluster": "owned"
            },
            "tags_all": {
              "Name": "devops-cluster-node-sg",
              "kubernetes.io/cluster/devops-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e303f8c0132d32d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:934271694309:subnet/subnet-0b8dd50bdfb635fdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8dd50bdfb635fdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "934271694309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-private-subnet-1",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "devops-cluster-private-subnet-1",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04e303f8c0132d32d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:934271694309:subnet/subnet-043751b38c17d32e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043751b38c17d32e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "934271694309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-private-subnet-2",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "devops-cluster-private-subnet-2",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04e303f8c0132d32d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:934271694309:subnet/subnet-0dc5b25b48f71353f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc5b25b48f71353f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "934271694309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-public-subnet-1",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "devops-cluster-public-subnet-1",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04e303f8c0132d32d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:934271694309:subnet/subnet-0574982dd3ecd6703",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0574982dd3ecd6703",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "934271694309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-public-subnet-2",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "devops-cluster-public-subnet-2",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04e303f8c0132d32d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:934271694309:vpc/vpc-04e303f8c0132d32d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a6dbf675b204c654",
            "default_route_table_id": "rtb-02a0d9acbef9e7e48",
            "default_security_group_id": "sg-006e009ea856ed677",
            "dhcp_options_id": "dopt-097d6b00afbaf0ce1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04e303f8c0132d32d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a0d9acbef9e7e48",
            "owner_id": "934271694309",
            "tags": {
              "Name": "devops-cluster-vpc",
              "kubernetes.io/cluster/devops-cluster": "shared"
            },
            "tags_all": {
              "Name": "devops-cluster-vpc",
              "kubernetes.io/cluster/devops-cluster": "shared"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}